# diario-sjc-crawler

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: eda.ipynb  test_crawler.ipynb  test_raw_requests.ipynb  test_storage_load.ipynb
scripts/: run_crawler.py
src/diario_crawler/cli/: run_crawler.py
src/diario_crawler/core/: __init__.py  clients.py  config.py  crawler.py
src/diario_crawler/crawler_configs/: base.py  es_associacao_municipios.py  ms_corumba.py  rj_rio_de_janeiro.py  ro_jaru.py  sp_sao_jose_dos_campos.py
src/diario_crawler/http/: __init__.py  client.py  concurrent.py
src/diario_crawler/models/: __init__.py  article.py  content.py  gazette.py
src/diario_crawler/parsers/: __init__.py  content.py  metadata.py  structure.py
src/diario_crawler/processors/: __init__.py  aggregator.py
src/diario_crawler/storage/: __init__.py  base.py  local.py  minio.py  parquet.py  parquet_loader.py  parquet_storage.py
src/diario_crawler/utils/: __init__.py  dates.py  logging.py
tests/: README.md  conftest.py  test_client.py  test_concurrent.py  test_crawler.py  test_http_clients.py  test_structure_parser.py
tests/fixtures/vcr_cassettes/: .gitkeep  test_fetch_404.yaml  test_fetch_all_concurrency_limit.yaml  test_fetch_all_concurrent.yaml  test_fetch_all_mixed.yaml  test_fetch_content_batch.yaml  test_fetch_metadata_batch.yaml  test_fetch_structure_batch.yaml  test_fetch_success.yaml  test_parse_articles_from_html.yaml  test_process_batch.yaml  test_run_batched.yaml  test_run_full.yaml  test_structure_parser_empty.yaml  test_structure_parser_regression.yaml
