[tool.poetry]
name = "diario-sjc-crawler"
version = "0.1.0"
description = ""
authors = ["almeidadm <almeidadm@outlook.com>"]
readme = "README.md"
packages = [{include = "diario_crawler", from = "src"}]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
httpx = {extras = ["http2"], version = ">=0.28.1,<0.29.0"}
selectolax = ">=0.4.0,<0.5.0"
rich = ">=14.2.0,<15.0.0"
pandas = ">=2.3.3,<3.0.0"
pyarrow = ">=22.0.0,<23.0.0"
duckdb = ">=1.4.1,<2.0.0"
polars = ">=1.35.1,<2.0.0"
sentence-transformers = ">=5.1.2,<6.0.0"
vcrpy = ">=7.0.0,<8.0.0"
# Networking
tenacity = ">=9.0.0,<10.0.0"
# Reproducibility
pydantic-settings = ">=2.6.1,<3.0.0"
typer = {extras = ["all"], version = ">=0.15.1,<1.0.0"}
unidecode = "^1.4.0"
minio = "^7.2.18"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=7.1.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=7.0.0,<8.0.0"
flake8 = ">=7.3.0,<8.0.0"
taskipy = ">=1.14.1,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
tqdm = {extras = ["notebook"], version = ">=4.67.1,<5.0.0"}
seaborn = ">=0.13.2,<0.14.0"
notebook = ">=7.4.7,<8.0.0"
pytest = ">=8.3.0,<9.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["src"]
skip_gitignore = true

[tool.taskipy.tasks]
lint = "flake8 src"
format = "isort src && black src"
check = "task format && task lint"
test = "pytest tests/ -v"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
]

[tool.poetry.scripts]
cli = 'diario_crawler.cli.run_crawler:main'
